samples/_failures_safe/1761501289_698cc8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fae1fc17.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_fae1fc17.c:178:9: error: expected expression at end of input
  178 |         if (min_index ==
      |         ^~
./samples/SAFE/__tmp_fae1fc17.c:178:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fae1fc17.c:178:9: error: expected declaration or statement at end of input
